--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -286,7 +285,7 @@
       <div id="container">
         <div id="nav">
           <input type="text" id="url-bar" placeholder="Paste a link or instagram of the hated...">
-          <button id="go-button"><a href="C:\Users\Acer\Desktop\AVISO.txt">CLICK</a></button>
+          <button id="go-button"><a href="C:\Users\Acer\Desktop\HATEYOU\AVISO.html">CLICK</a></button>
         </div>
         <div id="content">
           <iframe id="browser-frame"></iframe>
